# uzume_gui_prototype

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
domain/entities/: WaveformFragments.cpp  WaveformFragments.hpp
domain/usecases/: EditVoice.cpp  EditVoice.hpp
models/: Contour.cpp  Contour.hpp
views/: Contour.cpp  Contour.hpp  ContourWidget.cpp  ContourWidget.hpp  WaveformFragmentDynamicsWidget.cpp  WaveformFragmentDynamicsWidget.hpp  WaveformFragmentsWidget.cpp  WaveformFragmentsWidget.hpp
